--- a/src/css/base.css
+++ b/src/css/base.css
@@ -15,13 +15,18 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+button {
+  all: unset;
+  cursor: pointer;
+}
 body {
   display: flex;
   flex-direction: column;
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  background: #2A7B9B;
+  background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(134, 83, 237, 1) 100%);
 }
 
 main {
