--- a/src/css/vite-promo.css
+++ b/src/css/vite-promo.css
@@ -26,11 +26,19 @@
 .main-title-gradient {
   display: block;
   font-size: 2em;
-  background-image: linear-gradient(120deg, #bd34fe 30%, #41d1ff);
+  font-size: 48px;
+  font-weight: bold;
+
+  background: linear-gradient(
+    rgba(255,255,255,0.8),
+    rgba(255,255,255,0.4)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
-}
+  }
 @media only screen and (min-width: 768px) {
   .main-title-gradient {
     font-size: 3em;
